finished header, body, and footer of index.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index - Portfolio</title>
 </head>
 <body>
-    
-</body>
+    <header>
+    <h1>Safiyya Leyli Komurova</h1>
+    <p>Comp Sci Student | BCTS Class of 2029</p>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="interests.html">Interests</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+    </header>
+
+    <main>
+        <section>
+        <h2>Welcome to My Portfolio</h2>
+        <img src="" alt="Safiyya Komurova" width="400">
+        <p>Hello there! My name's Safiyya Komurova, and I'm a freshman majoring in the Computer Science program at Bergen Technical Schools in Teterboro. Currently, I'm learning the basics of HTML and touching upon CSS, but later in the year I am expecting to learn JavaScript and possibly Python as part of my Intro to Programming class.</p>
+        <p>I'm writing this portfolio to showcase the skills I have learned from the class thus far. Over the next four years, I'm expecting to delve further into Python and the complexities of CSS, although currently, I am only utilizing the basics of HTML, as I have stated previously.</p>
+        <p><strong><a href="about.html">Learn More About Me</a></strong></p>
+        </section>
+    </main>
+    </body>
+    <hr>
+    <footer>
+        <p>&copy; 2025 Safiyya Komurova. All rights reserved.</p>
+        <p>BCTS-Teterboro Campus Computer Science Program</p>
+        <a href="mailto:safkom29@bergen.org" target="_blank">Email</a>
+        <a href="https://github.com" target="_blank">GitHub</a>
+    </footer>
 </html>
