finished about me page, added footer & nav page to interests page. added photo for the student picture.

--- a/about.html
+++ b/about.html
@@ -1,21 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Me</title>
 </head>
+
 <body>
     <header>
-    <h1>Safiyya Leyli Komurova</h1>
-    <p>Comp Sci Student | BCTS Class of 2029</p>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="interests.html">Interests</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+        <h1>Safiyya Leyli Komurova</h1>
+        <p>Comp Sci Student | BCTS Class of 2029</p>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="interests.html">Interests</a>
+            <a href="contact.html">Contact</a>
+        </nav>
     </header>
-    
+    <main>
+        <h2>About Me</h2>
+        <img src="WIN_20251007_14_35_01_Pro.jpg" alt="Safiyya--student photo" width="350 px">
+        <section>
+            <h3>My Background</h3>
+            <p>
+                I am a freshman at Bergen County Technical Schools, and am currently attending the Teterboro campus. I chose the Computer Science program originally because both my parents were software engineers. However, after starting some surface-level research on HTML, I found that I had a <i>real</i> desire to learn coding and discover <b>how</b> softwares, specifically some AI platforms, worked.
+            </p>
+            <p>Outside of school, I enjoy writing about small 
+                (and sometimes relatively complex) stories that I create with my siblings-or daydreams. 
+            I also have a passion for drawing, although I'm not exactly diverse with my mediums, and I've been playing the piano for almost 10 years now. Music, to be completely honest, is a deep-rooted pleasure for me and is one of my greatest comforts.</p>
+        </section>
+
+        <section>
+            <h3>Technical Skills</h3>
+            <ul> <li><strong>Currently Learning:</strong> HTML5, CSS, JavaScript, Bootstrap</li>
+                <li><strong>Tools:</strong> VS Code, Git, GitHub, Chrome DevTools, Google Classroom (for viewing assignments)</li>
+                <li><strong>Future Courses: Python and Intro to Machine Learning and AI - 10th Grade, Programming (Backend Frameworks) and Game Development - 11th Grade</strong></li>
+                <li><strong>CS Capstone Project: Senior year and Intro to Computing (Java) - 12th Grade</strong></li>
+            </ul>
+        </section>
+        <section>
+            <h3>Education</h3>
+            <p><b>Bergen County Technical Schools - Teterboro</b></p>
+            <p>Class of 2029 [Freshman]</p>
+            <p>Current Course: Introduction to Programming</p>
+        </section>
+
+        <section>
+            <h3>Career Goals</h3>
+            <p>In all honesty, I applied to this school to help figure out what I wanted to be. Originally, I wanted to pursue a medical career--I wanted to be either a kid's doctor or a bioengineer. Now, I'm looking to enter the cybersecurity workforce or become a software engineer.</p>
+        </section>
+    </main>
+    <hr>
+    <footer>
+        <p>&copy; 2025 Safiyya Komurova. All rights reserved.</p>
+        <p>BCTS-Teterboro Campus Computer Science Program</p>
+        <a href="mailto:safkom29@bergen.org" target="_blank">Email</a>
+        <a href="https://github.com" target="_blank">GitHub</a>
+    </footer>
 </body>
+
 </html>
