--- a/interests.html
+++ b/interests.html
@@ -16,6 +16,15 @@
         <a href="contact.html">Contact</a>
     </nav>
     </header>
-    
+     <main>
+
+     </main>
+     <hr>
+     <footer>
+        <p>&copy; 2025 Safiyya Komurova. All rights reserved.</p>
+        <p>BCTS-Teterboro Campus Computer Science Program</p>
+        <a href="mailto:safkom29@bergen.org" target="_blank">Email</a>
+        <a href="https://github.com" target="_blank">GitHub</a>
+    </footer>
 </body>
 </html>
