edited the bold on the "technical skills" section in the about me HTML, now i'm finished with the about me page

--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
             <h3>Technical Skills</h3>
             <ul> <li><strong>Currently Learning:</strong> HTML5, CSS, JavaScript, Bootstrap</li>
                 <li><strong>Tools:</strong> VS Code, Git, GitHub, Chrome DevTools, Google Classroom (for viewing assignments)</li>
-                <li><strong>Future Courses: Python and Intro to Machine Learning and AI - 10th Grade, Programming (Backend Frameworks) and Game Development - 11th Grade</strong></li>
-                <li><strong>CS Capstone Project: Senior year and Intro to Computing (Java) - 12th Grade</strong></li>
+                <li><strong>Future Courses:</strong> Python and Intro to Machine Learning and AI - 10th Grade, Programming (Backend Frameworks) and Game Development - 11th Grade</li>
+                <li><strong>CS Capstone Project:</strong> Senior year and Intro to Computing (Java) - 12th Grade</li>
             </ul>
         </section>
         <section>
