added tech lab picture on index.html. i'm finished with index page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <section>
         <h2>Welcome to My Portfolio</h2>
-        <img src="" alt="Safiyya Komurova" width="400">
+        <img src="https://image.lexica.art/full_webp/e882fe87-edd7-4ca7-b40c-19a8e68bdddb" alt="futuristic technology lab picture" width="370">
         <p>Hello there! My name's Safiyya Komurova, and I'm a freshman majoring in the Computer Science program at Bergen Technical Schools in Teterboro. Currently, I'm learning the basics of HTML and touching upon CSS, but later in the year I am expecting to learn JavaScript and possibly Python as part of my Intro to Programming class.</p>
         <p>I'm writing this portfolio to showcase the skills I have learned from the class thus far. Over the next four years, I'm expecting to delve further into Python and the complexities of CSS, although currently, I am only utilizing the basics of HTML, as I have stated previously.</p>
         <p><strong><a href="about.html">Learn More About Me</a></strong></p>
