finished contact.html page

--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Me</title>
 </head>
+
 <body>
     <header>
-    <h1>Safiyya Leyli Komurova</h1>
-    <p>Comp Sci Student | BCTS Class of 2029</p>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="interests.html">Interests</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+        <h1>Safiyya Leyli Komurova</h1>
+        <p>Comp Sci Student | BCTS Class of 2029</p>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="interests.html">Interests</a>
+            <a href="contact.html">Contact</a>
+        </nav>
     </header>
-    
+    <main>
+        <h2>GET IN TOUCH</h2>
+
+        <section>
+            <h3>Contact Me</h3>
+            <p>If you want to reach out to me, either for work reasons or just if you want a friend to be with you, you
+                can use the form below to send me your information.
+                <br>(Or you could find me on GitHub!)
+            </p>
+        </section>
+        <section>
+            <h3>Send a Message!</h3>
+        </section>
+        <section>
+            <form action="">
+                <p><label for="name">Name:</label>
+                    <input type="text" id="name" placeholder="Enter username">
+                </p>
+                <p> <label for="email">Email:</label>
+                    <input type="email" id="email" placeholder="Enter email">
+                </p>
+                <p> <label for="Subject">Subject:</label>
+                    <input type="text" id="Subject">
+                </p>
+                <p> <label for="textbox">Message:</label>
+                    <br>
+                    <textarea name="text" id="textbox"></textarea>
+                </p>
+                <button type="submit">Submit Message</button>
+            </form>
+        </section>
+        <hr>
+        <section>
+            <h3>Other Ways to Connect</h3>
+            <p><strong>School Email:</strong> <a href="emailto:safiyyakomurova@gmail.com" target="_blank">safiyyakomurova@gmail.com</a></p>
+            <ul><b>Find Me Online:</b>
+            <li><a href="https://github.com" target="_blank">GitHub</a> - Check out my code repositories!</li>
+            <li><a href="https://www.bergen.org/site/Default.aspx?PageID=15">Bergen Tech Websites</a> - While you're at it, learn a bit more about the school I'm attending!</li>
+            </ul>
+        </section>
+
+        <section>
+            <h3>About BCTS-Teterboro</h3>
+            <p>Bergen County Technical Schools - Teterboro Campus</p>
+            <p>Computer Science Major/Program</p>
+            <p>Intro to Programming (9th Grade)</p>
+        </section>
+    </main>
+ <hr>
+    <footer>
+        <p>&copy; 2025 Safiyya Komurova. All rights reserved.</p>
+        <p>BCTS-Teterboro Campus Computer Science Program</p>
+        <a href="mailto:safkom29@bergen.org" target="_blank">Email</a>
+        <a href="https://github.com" target="_blank">GitHub</a>
+    </footer>
 </body>
+
 </html>
