finished interests.html

--- a/interests.html
+++ b/interests.html
@@ -1,30 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <header>
-    <h1>Safiyya Leyli Komurova</h1>
-    <p>Comp Sci Student | BCTS Class of 2029</p>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="interests.html">Interests</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+        <h1>Safiyya Leyli Komurova</h1>
+        <p>Comp Sci Student | BCTS Class of 2029</p>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="interests.html">Interests</a>
+            <a href="contact.html">Contact</a>
+        </nav>
     </header>
-     <main>
+    <main>
+        <section>
+            <h2>My Interests & Hobbies</h2>
+            <p>I have many hobbies that are independent of computer science and coding-- interests that help me stay
+                motivated, balanced, and content with myself. Here's a list of a few!</p>
+        </section>
 
-     </main>
-     <hr>
-     <footer>
+        <section>
+            <h3>Drawing/Sketching</h3>
+            <img src="flower.jpg" alt="a sketch of flowers" width="250">
+            <p>Whenever I feel like it, I always love sitting down with a pencil and a sketchbook and doodling small
+                things. Usually, I focus on characters from various animated media and OCs (Original Characters). It
+                helps me feel happy and productive, and allows me to channel creativity and imagination in my usually
+                logic-based life.</p>
+
+            <b>A list of the things I draw the most:</b>
+            <ul>
+                <li><b>Flowers and plants:</b> usually roses, dahlias, mushroom variaties, and lotuses.</li>
+                <li><b>Characters from other media:</b> I'm flexible and often try to be diverse with this, but my top
+                    favorites to draw are characters from Sonic the Hedgehog, JJK, and TADC.</li>
+                <li><b>Original Characters:</b> Not much explanation needed. I really like creating new characters and
+                    drawing them as much as I can. That's where the creativity comes from.</li>
+            </ul>
+            <p><i>What I like about drawing:</i> Creative outlet, very abstract and imaginative, requires thinking and
+                strong visualizing skills.</p>
+        </section>
+        <br>
+        <section>
+            <h3>Writing</h3>
+            <img src="https://static.vecteezy.com/system/resources/previews/000/518/208/original/man-working-with-computer-bright-colorful-vector-illustration.jpg"
+                alt="clipart of man typing on computer" width="300">
+            <p>Writing has always been a source of comfort and inspiration for me. Much like drawing, I enjoy writing
+                because I love telling my own stories and it allows my imagination to run free.</p>
+            <p><b>Genres I enjoy writing:</b></p>
+            <ul>
+                <li>Psychological Horror</li>
+                <li>Sci-Fi</li>
+                <li>Fantasy</li>
+            </ul>
+            <p>Personally, I think writing is essential to me succeeding in multiple fields, as I find it the most
+                accessible and easiest form of media for me to express myself in. Writing can also develop critical
+                thinking and planning skills, as to compose a story you have to account for multiple aspects of your
+                characters, settings, etc.</p>
+        </section>
+
+        <section>
+            <h3>Gaming</h3>
+            <img src="https://assets1.ignimgs.com/2019/01/17/terraria---button-1547745886957.jpg"
+                alt="the game Terraria's main logo & picture" width="256">
+            <img src="modern-gaming-monitor_195186-4747.jpg" alt="clipart of modern gaming monitor" width="300">
+            <p>As you can tell by the pictures, I also like playing various video games during my free time (although
+                nowadays, not very often). It's an easy stress-reliever and provides multiple unique experiences when
+                playing the right games.</p>
+            <p>A few of my favorites are, but are not limited to:</p>
+            <ol>
+                <li><b>Terraria:</b> an immersive 2D sandbox game where you can craft thousands of weapons, build unique
+                    architecture, and house NPCS.</li>
+                <li><b>Undertale:</b> a 2D RPG game, one that teaches you the values of kindness, determination, and the
+                    consequences of your actions.</li>
+                <li><b>Sonic the Hedgehog:</b> although the STH franchise is expansive and not limited to one game, I
+                    enjoy the timing-based platforming experience Sonic games bring.</li>
+            </ol>
+            <p>I enjoy gaming because of the thousands of different experiences they bring, the unpredictability of new
+                games, and the development of cognative and finger reflexes.</p>
+        </section>
+        <br>
+        <section>
+            <h2>How all My Hobbbies Connect to CS</h2>
+            <p>In general, it's important to have a diverse palette of hobbies and talents, but you should have a main
+                focus point that most (if not all) of your hobbies tie back to. For me, gaming inspired me to find out
+                how all of the encoded mechanics and sprites work and what makes them behave the way they do. Writing
+                and drawing helped me discover the creativity to use my developing coding skills to create new things
+                and find inspiration in others' work.
+            </p>
+        </section>
+    </main>
+    <hr>
+    <footer>
         <p>&copy; 2025 Safiyya Komurova. All rights reserved.</p>
         <p>BCTS-Teterboro Campus Computer Science Program</p>
         <a href="mailto:safkom29@bergen.org" target="_blank">Email</a>
         <a href="https://github.com" target="_blank">GitHub</a>
     </footer>
 </body>
+
 </html>
