finished final touches on project, done

--- a/contact.html
+++ b/contact.html
@@ -52,17 +52,19 @@
         <hr>
         <section>
             <h3>Other Ways to Connect</h3>
-            <p><strong>School Email:</strong> <a href="emailto:safiyyakomurova@gmail.com" target="_blank">safiyyakomurova@gmail.com</a></p>
-            <ul><b>Find Me Online:</b>
+            <p><strong>School Email:</strong> <a href="emailto:safkom29@bergen.org" target="_blank">safkom29@bergen.org</a></p>
+            <p><b>Find Me Online:</b></p>
+            <ul>
             <li><a href="https://github.com" target="_blank">GitHub</a> - Check out my code repositories!</li>
-            <li><a href="https://www.bergen.org/site/Default.aspx?PageID=15">Bergen Tech Websites</a> - While you're at it, learn a bit more about the school I'm attending!</li>
+            <li><a href="https://www.bergen.org/site/Default.aspx?PageID=15" target="_blank">Bergen Tech Websites</a> - While you're at it, learn a bit more about the school I'm attending!</li>
             </ul>
         </section>
 
         <section>
             <h3>About BCTS-Teterboro</h3>
+            <p><i>Some information about the school (and course) I'm attending:</i></p>
             <p>Bergen County Technical Schools - Teterboro Campus</p>
-            <p>Computer Science Major/Program</p>
+            <p>Computer Science Program/Major</p>
             <p>Intro to Programming (9th Grade)</p>
         </section>
     </main>
