--- a/about.html
+++ b/about.html
@@ -33,6 +33,7 @@
 
         <section>
             <h3>Technical Skills</h3>
+            <img src="https://image.lexica.art/full_webp/e882fe87-edd7-4ca7-b40c-19a8e68bdddb" alt="futuristic technology lab picture" width="300">
             <ul> <li><strong>Currently Learning:</strong> HTML5, CSS, JavaScript, Bootstrap</li>
                 <li><strong>Tools:</strong> VS Code, Git, GitHub, Chrome DevTools, Google Classroom (for viewing assignments)</li>
                 <li><strong>Future Courses:</strong> Python and Intro to Machine Learning and AI - 10th Grade, Programming (Backend Frameworks) and Game Development - 11th Grade</li>
